--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "feather-icons": "^4.26.0",
+    "firebase": "^7.15.1",
     "framer-motion": "^1.10.2",
     "react": "^16.13.1",
     "react-anchor-link-smooth-scroll": "^1.0.12",
